--- a/CSS Unit-03/selectors.html
+++ b/CSS Unit-03/selectors.html
@@ -11,7 +11,7 @@
             font-family: Georgia, 'Times New Roman', Times, serif;
         }
         h3{
-            color: blueviolet;
+            color: rgb(130, 46, 208);
         }
         .txt_clr{
             color:#e030b7;
