--- a/CSS Unit-03/flexing1.html
+++ b/CSS Unit-03/flexing1.html
@@ -4,8 +4,120 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FLEXING-1</title>
+
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: #825e8a;
+      font-family: Arial, sans-serif;
+    }
+    .container {
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+      max-width: 900px;
+      margin: auto;
+      background: #736fa4;
+      border: 1px solid #ddd;
+    }
+    .header-top {
+      display: flex;
+      flex-direction: row;
+      border-bottom: 1px solid #ccc;
+    }
+    .header-logo, .header-banner {
+      flex: 1;
+      padding: 10px;
+      min-width: 0;
+      text-align: center;
+      background: #8a76b3;
+    }
+    .header-bar {
+      padding: 10px;
+      border-bottom: 1px solid #ccc;
+      background: #6a5d99;
+      text-align: center;
+    }
+    .main-content {
+      display: flex;
+      flex: 1;
+      flex-direction: row;
+      min-height: 300px;
+    }
+    .left-blocks, .right-blocks {
+      flex: 1;
+      padding: 10px;
+      background: #9789b3;
+      min-width: 110px;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+    .center-blocks {
+      flex: 3;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      padding: 10px;
+      background: #70587e;
+      min-width: 220px;
+    }
+    .center-center-blocks {
+      flex: 1;
+      background: #6dc99f;
+      padding: 10px;
+      text-align: center;
+    }
+    .center-lr-blocks-row {
+      display: flex;
+      flex-direction: row;
+      gap: 10px;
+      flex: 1;
+    }
+    .center-left-blocks, .center-right-blocks {
+      flex: 1;
+      background: #56b0e0;
+      padding: 10px;
+      text-align: center;
+    }
+    .module-contents {
+      padding: 10px;
+      background: #cff4fc;
+      border-top: 1px solid #ccc;
+      text-align: center;
+    }
+    .footer-bar {
+      padding: 10px;
+      background: #5a6b7b;
+      color: #fff;
+      text-align: center;
+      border-top: 1px solid #ccc;
+    }
+  </style>
 </head>
 <body>
-    
+  <div class="container">
+    <div class="header-top">
+      <div class="header-logo">Header Logo</div>
+      <div class="header-banner">Header Banner</div>
+    </div>
+    <div class="header-bar">Header Bar</div>
+    <div class="main-content">
+      <div class="left-blocks">Left Blocks</div>
+      <div class="center-blocks">
+        <div class="center-center-blocks">Center-Center Blocks</div>
+        <div class="center-lr-blocks-row">
+          <div class="center-left-blocks">Center-Left Blocks</div>
+          <div class="center-right-blocks">Center-Right Blocks</div>
+        </div>
+      </div>
+      <div class="right-blocks">Right Blocks</div>
+    </div>
+    <div class="module-contents">Module Contents</div>
+    <div class="footer-bar">Footer Bar</div>
+  </div>
+
 </body>
 </html>
