--- a/PRACTICAL ASSIGNMENT/navigationmenu.html
+++ b/PRACTICAL ASSIGNMENT/navigationmenu.html
@@ -21,7 +21,7 @@
       background-color: #2196F3;
       color: white;
       padding: 8px;
-      display: inline; /* flows inside one line */
+      display: inline; 
       margin-right: 5px;
     }
 
@@ -32,15 +32,15 @@
       padding: 8px;
       width: 120px;
       height: 35px;
-      display: inline-block; /* box model applies */
+      display: inline-block; 
       margin-right: 5px;
       text-align: center;
-      line-height: 35px; /* vertical center */
+      line-height: 35px; 
     }
 
     /* Float left example */
     .float-left {
-      float: left; /* float left */
+      float: left;
       background-color: #ff9800;
       color: black;
       width: 120px;
