--- a/PRACTICAL ASSIGNMENT/ecommerce.html
+++ b/PRACTICAL ASSIGNMENT/ecommerce.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireless Headphones - E-commerce Product Page</title>
     <style>
-        /* Reset and body styling */
+
         * {
             margin: 0;
             padding: 0;
@@ -18,40 +18,40 @@
             line-height: 1.6;
         }
 
-        /* Container for centering the product page */
+    
         .container {
             max-width: 1200px;
-            margin: 20px auto; /* margin provides outer spacing */
-            padding: 20px; /* padding adds inner space */
+            margin: 20px auto; 
+            padding: 20px; 
             background-color: white;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
 
-        /* Product layout using Flexbox for beginner-friendly responsiveness */
+
         .product {
             display: flex;
-            flex-direction: column; /* Stacks image and details vertically on small screens */
+            flex-direction: column; 
             gap: 20px;
         }
         @media (min-width: 768px) {
             .product {
-                flex-direction: row; /* Side-by-side on larger screens */
+                flex-direction: row; 
             }
         }
 
         /* Product image styling */
         .product-image {
             width: 100%;
-            height: 300px; /* Fixed height for consistency */
+            height: 300px; 
             object-fit: cover;
-            border: 2px solid #ddd; /* border adds outline */
+            border: 2px solid #ddd; 
             border-radius: 10px;
-            padding: 5px; /* Small padding inside border */
+            padding: 5px; 
         }
         @media (min-width: 768px) {
             .product-image {
-                width: 400px; /* Wider image on desktop */
+                width: 400px; 
                 flex-shrink: 0;
             }
         }
@@ -59,8 +59,8 @@
         /* Product details section */
         .product-details {
             flex: 1;
-            padding: 30px; /* Generous padding for content breathing room */
-            border-left: 3px solid #4CAF50; /* Green accent border */
+            padding: 30px; 
+            border-left: 3px solid #4CAF50; 
             background-color: #fafafa;
         }
         @media (max-width: 767px) {
@@ -72,7 +72,7 @@
 
         /* Title styling with larger font */
         .product-title {
-            font-size: 2.5em; /* Large font-size for impact */
+            font-size: 2.5em; 
             font-weight: bold;
             color: #2c3e50;
             margin-bottom: 10px;
@@ -81,7 +81,7 @@
         /* Price styling - prominent green color */
         .product-price {
             font-size: 2em;
-            color: #4CAF50; /* Green for positive purchase signal */
+            color: #4CAF50; 
             font-weight: bold;
             margin: 15px 0;
         }
@@ -101,7 +101,7 @@
         }
         .features li {
             padding: 10px 0;
-            padding-left: 30px; /* Indent for bullet space */
+            padding-left: 30px; 
             position: relative;
             font-size: 1.1em;
         }
@@ -118,13 +118,13 @@
         .buy-button {
             background-color: #4CAF50;
             color: white;
-            padding: 15px 40px; /* padding for comfortable click area */
+            padding: 15px 40px; 
             font-size: 1.3em;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            width: 100%; /* Full width for mobile */
-            height: 55px; /* Fixed height for consistency */
+            width: 100%; 
+            height: 55px; 
             transition: background-color 0.3s;
         }
         .buy-button:hover {
