--- a/PRACTICAL ASSIGNMENT/studentprofilecard.html
+++ b/PRACTICAL ASSIGNMENT/studentprofilecard.html
@@ -12,8 +12,8 @@
             background: #e0f7fa;
             padding: 50px;
             display: flex;
-            justify-content: center; /* Centers card horizontally */
-            align-items: center; /* Centers card vertically */
+            justify-content: center; 
+            align-items: center; 
             min-height: 100vh;
         }
 
@@ -24,8 +24,8 @@
             padding: 30px;
             box-shadow: 0 5px 15px rgba(0,0,0,0.1);
             display: flex;
-            flex-direction: column; /* Stack items top to bottom */
-            align-items: center; /* Center items horizontally */
+            flex-direction: column; 
+            align-items: center; 
         }
 
         .photo {
@@ -43,8 +43,8 @@
         }
 
         .info {
-            display: flex; /* Makes items sit side by side */
-            justify-content: space-around; /* Spreads items evenly */
+            display: flex; 
+            justify-content: space-around; 
             width: 100%;
             margin-bottom: 20px;
         }
@@ -55,7 +55,7 @@
 
         .skills {
             display: flex;
-            flex-wrap: wrap; /* Wraps to new line */
+            flex-wrap: wrap; 
             justify-content: center;
             gap: 10px;
             width: 100%;
@@ -76,7 +76,7 @@
         }
 
         button {
-            flex: 1; /* Equal width buttons */
+            flex: 1; 
             padding: 10px;
             border: none;
             border-radius: 8px;
