--- a/HTML/htmlformating.html
+++ b/HTML/htmlformating.html
@@ -22,7 +22,7 @@
 
     <h3>5<Sup>2</Sup>=25 and water formula is H <Sub>2</Sub>0</h3>
 
-    &copy; &dollar; &trade; &reg; &#e2554d;
+    &copy; &dollar; &trade; &reg; &#e2554d; &#8377;
 
 
     
