--- a/PRACTICAL ASSIGNMENT/ecommerce.html
+++ b/PRACTICAL ASSIGNMENT/ecommerce.html
@@ -140,7 +140,7 @@
             <div class="product-details">
                 <h1 class="product-title">Premium Wireless Headphones</h1>
                 
-                <div class="product-price">₹4,999</div>
+                <div class="product-price">&#8377; 4,999</div>
                 
                 <p class="product-description">
                     Experience superior sound quality with these premium wireless headphones. 
