--- a/PRACTICAL ASSIGNMENT/navigationmenu.html
+++ b/PRACTICAL ASSIGNMENT/navigationmenu.html
@@ -64,14 +64,14 @@
   <div class="block">Block Menu Item</div>
 
   <h3>Inline Elements (Flow like text)</h3>
-  <span class="inline">Inline 1</span>
-  <span class="inline">Inline 2</span>
-  <span class="inline">Inline 3</span>
+  <span class="inline">Home </span>
+  <span class="inline">About </span>
+  <span class="inline">Campus</span>
 
   <h3>Inline-block Elements    (Box controls size)</h3>
-  <div class="inline-block">Inline-block 1</div>
-  <div class="inline-block">Inline-block 2</div>
-  <div class="inline-block">Inline-block 3</div>
+  <div class="inline-block">Academic</div>
+  <div class="inline-block">Placement</div>
+  <div class="inline-block">Research</div>
 
   <h3>Float Left Elements</h3>
   <div class="float-left">Float Left 1</div>
