--- a/PRACTICAL ASSIGNMENT/navigationmenu.html
+++ b/PRACTICAL ASSIGNMENT/navigationmenu.html
@@ -74,14 +74,15 @@
   <div class="inline-block">Research</div>
 
   <h3>Float Left Elements</h3>
-  <div class="float-left">Float Left 1</div>
-  <div class="float-left">Float Left 2</div>
-  <div class="float-left">Float Left 3</div>
+  <div class="float-left">Float 1</div>
+  <div class="float-left">Float 2</div>
+  <div class="float-left">Float 3</div>
 
   <!-- Clear floats so below content is not beside float -->
-  <div class="clear"></div>
+  <div class="clear"><br></br>
+    <input type="button" value="clear"> </div>
 
-  <p>This paragraph is below floated elements because of <code> clear: both;</code>.</p>
+
 
 </body>
 </html>
