--- a/PRACTICAL ASSIGNMENT/studentprofilecard.html
+++ b/PRACTICAL ASSIGNMENT/studentprofilecard.html
@@ -105,10 +105,11 @@
             <span class="skill">HTML</span>
             <span class="skill">CSS</span>
             <span class="skill">Flexbox</span>
+            <span class="skill">JSS</span>
         </div>
         
         <div class="buttons">
-            <button class="btn1">Portfolio</button>
+            <button class="btn1">View profile</button>
             <button class="btn2">Resume</button>
         </div>
     </div>
